gitlab/service.yml
apiVersion: v1
kind: Service
metadata:
  name: gitlab
  namespace: cicd
spec:
  type: ClusterIP
  selector:
    app: gitlab
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: ssh
      protocol: TCP
      port: 22
      targetPort: 22
