gitlab/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab
  namespace: cicd
  labels:
    app: gitlab
    component: ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/headers.customrequestheaders.X-Forwarded-Proto: "https"
    traefik.ingress.kubernetes.io/headers.customrequestheaders.X-Forwarded-Host: "gitlab.team1.devops.pmifi.ru"
    traefik.ingress.kubernetes.io/headers.customrequestheaders.X-Forwarded-Port: "443"
spec:
  tls:
    - hosts:
        - gitlab.team1.devops.pmifi.ru
      secretName: multi-domain-tls
  rules:
    - host: gitlab.team1.devops.pmifi.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitlab
                port:
                  number: 80
